--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>Auto360 Solutions</title>
     <meta name="author" content="Angfuzsoft">
-    <meta name="description" content="Malen - Car Repair and Services HTML Template">
-    <meta name="keywords" content="Malen - Car Repair and Services HTML Template">
+    <meta name="description" content="Auto360 Solutions">
+    <meta name="keywords" content="Auto360 Solutions">
     <meta name="robots" content="INDEX,FOLLOW">
 
     <!-- Mobile Specific Metas -->
@@ -363,7 +363,7 @@ Hero Area
         <div class="hero-slider-4 th-carousel number-dots" data-slide-show="1" data-md-slide-show="1" data-fade="true" data-dots="true" data-xl-dots="true" data-ml-dots="true" data-lg-dots="true">
             <div class="th-hero-slide">
                 <div class="th-hero-bg" data-bg-src="assets/img/update_1/hero/1.png">
-                    <img src="assets/img/update_1/hero/1.png" alt="Hero Image" style="width: 100%; height: auto; position: relative; filter: brightness(0.5);">
+                    <img src="assets/img/update_1/hero/1.png" alt="Hero Image" style="filter: brightness(0.5);">
 
                 </div>
                 <div class="container">
@@ -433,7 +433,7 @@ Service Area
                             <span class="service-block_number">Service 01</span>
                             <h3 class="service-block_title"><a href="#">Logbook Service</a></h3>
                         
-                            <p class="th-btn"> Strting From $120.00 </p>
+                            <p class="th-btn"> Starting From $120.00 </p>
                         </div>
                     </div>
                 </div>
@@ -445,7 +445,7 @@ Service Area
                         <div class="service-block_content" data-bg-src="assets/img/update_1/bg/pattern_bg_7.png">
                             <span class="service-block_number">Service 02</span>
                             <h3 class="service-block_title"><a href="#">Engine Swap</a></h3>
-                            <p class="th-btn"> Strting From $650.00 </p>
+                            <p class="th-btn"> Starting From $650.00 </p>
                         </div>
                     </div>
                 </div>
@@ -457,7 +457,7 @@ Service Area
                         <div class="service-block_content" data-bg-src="assets/img/update_1/bg/pattern_bg_7.png">
                             <span class="service-block_number">Service 03</span>
                             <h3 class="service-block_title"><a href="#">Transmission Swap</a></h3>
-                            <p class="th-btn"> Strting From $450.00 </p>
+                            <p class="th-btn"> Starting From $450.00 </p>
                         </div>
                     </div>
                 </div>
@@ -469,7 +469,7 @@ Service Area
                         <div class="service-block_content" data-bg-src="assets/img/update_1/bg/pattern_bg_7.png">
                             <span class="service-block_number">Service 04</span>
                             <h3 class="service-block_title"><a href="#">Brakes Replacement</a></h3>
-                            <p class="th-btn"> Strting From $120.00 </p>
+                            <p class="th-btn"> Starting From $120.00 </p>
                         </div>
                     </div>
                 </div>
@@ -481,7 +481,7 @@ Service Area
                         <div class="service-block_content" data-bg-src="assets/img/update_1/bg/pattern_bg_7.png">
                             <span class="service-block_number">Service 05</span>
                             <h3 class="service-block_title"><a href="#">RWC Certification</a></h3>
-                            <p class="th-btn"> Strting From $180.00 </p>
+                            <p class="th-btn"> Starting From $180.00 </p>
                         </div>
                     </div>
                 </div>
@@ -666,7 +666,7 @@ Contact Area
                                 </div>
                                 <div class="media-body">
                                     <h4 class="contact-info_title">Location</h4>
-                                    <span class="contact-info_text" style="font-size: 0.95em;">49 Gallery Way, Pakenham</span>
+                                    <span class="contact-info_text" style="font-size: 0.95em;">12/14 Hogan Court, Pakenham, 3810</span>
                                 </div>
                             </div>
                             <div class="contact-wrapper">
@@ -684,7 +684,7 @@ Contact Area
             <div class="container">
                 <div class="row">
                     <div class="col-12">
-                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3140.2059052644304!2d145.47047967566272!3d-38.08887074981054!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6ad61df16ec20b57%3A0xf753ead688fd03bf!2sAuto360%20Solutions!5e0!3m2!1sen!2sau!4v1731109295892!5m2!1sen!2sau" width="600" height="450" style="border:1;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3140.436501507883!2d145.49475207566255!3d-38.08350234950182!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6b29e1f92a1aca5b%3A0x63d8fa7a1f49cf20!2s2%2F14-17%20Hogan%20Ct%2C%20Pakenham%20VIC%203810!5e0!3m2!1sen!2sau!4v1731644539558!5m2!1sen!2sau" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                     </div>
                 </div>
             </div>
@@ -740,7 +740,7 @@ Contact Area
                 <div class="col-md-6 col-xl-3">
                     <div class="widget footer-widget">
                         <h3 class="widget_title">Contact Us</h3>
-                        <p class="footer-text">Address: 49 Gallery Way, Pakenham</p>
+                        <p class="footer-text">Address: 12/14 Hogan Court, Pakenham, 3810</p>
                         <p class="footer-text">Phone: <a href="#">0452 500 491 | 0401 080 385</a></p>
                         <p class="footer-text">Email: <a href="mailto:auto360solutions@outlook.com">auto360solutions@outlook.com</a></p>
                         <p class="footer-text">Follow Us:</p>
