--- a/invoice.html
+++ b/invoice.html
@@ -32,6 +32,17 @@
                 <h3>Invoice Information</h3>
                 <div class="input-row">
                     <div class="customer-row">
+                        <label for="invoice-type" style="margin-right: 25px;">Invoice Type:</label>
+                        <select id="invoice-type">
+                            <option value="Invoice" selected>Invoice</option>
+                            <option value="Tax Invoice">Tax Invoice</option>
+                        </select>
+                    </div>
+                    <div class="customer-row"></div>
+                </div>
+                
+                <div class="input-row">
+                    <div class="customer-row">
                         <label for="invoice-to">Invoice To:</label>
                         <input type="text" id="invoice-to" placeholder="Enter invoice recipient" required>
                     </div>
