Update service prices and add Afterpay info
Increased prices for Logbook Service and RWC Certification. Added a section indicating Afterpay availability in store with logo to the contact area.

--- a/index.html
+++ b/index.html
@@ -433,7 +433,7 @@ Service Area
                             <span class="service-block_number">Service 01</span>
                             <h3 class="service-block_title"><a href="#">Logbook Service</a></h3>
                         
-                            <p class="th-btn"> Starting From $120.00 </p>
+                            <p class="th-btn"> Starting From $145.00 </p>
                         </div>
                     </div>
                 </div>
@@ -481,7 +481,7 @@ Service Area
                         <div class="service-block_content" data-bg-src="assets/img/update_1/bg/pattern_bg_7.png">
                             <span class="service-block_number">Service 05</span>
                             <h3 class="service-block_title"><a href="#">RWC Certification</a></h3>
-                            <p class="th-btn"> Starting From $180.00 </p>
+                            <p class="th-btn"> Starting From $200.00 </p>
                         </div>
                     </div>
                 </div>
@@ -723,6 +723,16 @@ Contact Area
                             <li><a href="#service-sec">Brakes Replacement</a></li>
                             <li><a href="#service-sec">RWC Certification</a></li>
                         </ul>
+
+                        <!-- Afterpay availability -->
+                        <div class="afterpay-info" style="margin-top: 15px; text-align: left;">
+                            <span style="color: white; display: block; margin-bottom: 5px;">
+                                Afterpay Available In Store
+                            </span>
+                            <img src="https://franchise.org.au/static/1c1594a1-ffba-4b42-89654e8fdbae2520/32f23e42-9b68-42fd-b4343f0d50578735/6328x2204_highestperformance__4a7c7e45a350/Afterpay.png" 
+                                alt="Afterpay" 
+                                style="height: 40px;">
+                        </div>
                     </div>
                 </div>
     
